include/astl/astl_telemetry.h


typedef struct _astl_platform_props_t {
  size_t      size;              
  uint32_t    flags;             
  const char* soc_name;          
  const char* vendor_id;         
  const char* os_name;           
  const char* kernel_name;       
  const char* kernel_version;    
  const char* kernel_release;    
  const char* firmware_version;  
  const char* hostname;          
  const char* architecture;      
} astl_platform_props_t;
typedef struct astl_get_system_info_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_platform_props_t* system_info;  
} astl_get_system_info_params_t;
ASTL_API astl_status_code astlGetSystemInfo(const astl_get_system_info_params_t* params) ASTL_API_NOEXCEPT;
typedef const void* astl_target_handle_t;  
typedef struct _astl_target_props_t {
  size_t               size;           
  astl_target_handle_t handle;         
  astl_target_handle_t parent_handle;  
  const char* name;                    
  const char* description;             
  const char* id;                      
} astl_target_props_t;
typedef struct astl_get_target_count_params_t {
  size_t    size;          
  uint32_t  flags;         
  uint32_t* target_count;  
} astl_get_target_count_params_t;
ASTL_API astl_status_code astlGetTargetCount(const astl_get_target_count_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_get_targets_params_t {
  size_t               size;     
  uint32_t             flags;    
  astl_target_props_t* targets;  
  uint32_t* target_count;        
} astl_get_targets_params_t;
ASTL_API astl_status_code astlGetTargets(const astl_get_targets_params_t* params) ASTL_API_NOEXCEPT;
typedef union _astl_value_t {
  uint8_t  ui8;   
  uint16_t ui16;  
  uint32_t ui32;  
  uint64_t ui64;  
  float    fp32;  
  double   fp64;  
  bool     b8;    
} astl_value_t;
typedef const void* astl_counter_handle_t;  
typedef struct _astl_sample_t {
  uint64_t     timestamp;  
  astl_value_t value;      
} astl_sample_t;
typedef struct _astl_counter_props_t {
  size_t                size;         
  astl_counter_handle_t handle;       
  const char*           name;         
  const char*           description;  
  uint32_t              min_sampling_interval;  
  astl_units_t units;                           
  const char* formula;               
  astl_value_type_t value_type;      
  astl_counter_type_t counter_type;  
} astl_counter_props_t;
typedef struct astl_get_counter_count_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t target_handle;  
  uint32_t*            counter_count;  
} astl_get_counter_count_params_t;
ASTL_API astl_status_code astlGetCounterCount(const astl_get_counter_count_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_get_counters_params_t {
  size_t                size;   
  uint32_t              flags;  
  astl_target_handle_t  target_handle;  
  astl_counter_props_t* counters;       
  uint32_t* counter_count;  
} astl_get_counters_params_t;
ASTL_API astl_status_code astlGetCounters(const astl_get_counters_params_t* params) ASTL_API_NOEXCEPT;
typedef const void* astl_metric_handle_t;  
typedef struct _astl_metric_props_t {
  size_t               size;         
  astl_metric_handle_t handle;       
  const char*          name;         
  const char*          description;  
  uint32_t             min_sampling_interval;  
  astl_units_t units;                          
  astl_value_type_t value_type;                
  astl_metric_type_t metric_type;              
  astl_category_t category;                    
} astl_metric_props_t;
typedef struct astl_get_metric_count_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t target_handle;  
  uint32_t*            metric_count;   
} astl_get_metric_count_params_t;
ASTL_API astl_status_code astlGetMetricCount(const astl_get_metric_count_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_get_metrics_params_t {
  size_t               size;   
  uint32_t             flags;  
  astl_target_handle_t target_handle;  
  astl_metric_props_t* metrics;        
  uint32_t* metric_count;              
} astl_get_metrics_params_t;
ASTL_API astl_status_code astlGetMetrics(const astl_get_metrics_params_t* params) ASTL_API_NOEXCEPT;
typedef struct _astl_state_props_t {
  size_t       size;         
  const char*  name;         
  const char*  description;  
  astl_value_t value;        
} astl_state_props_t;
typedef struct astl_get_metric_state_count_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  astl_metric_handle_t metric_handle;  
  uint32_t*            state_count;    
} astl_get_metric_state_count_on_target_params_t;
ASTL_API astl_status_code astlGetMetricStateCountOnTarget(const astl_get_metric_state_count_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct astl_get_metric_states_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  astl_metric_handle_t metric_handle;  
  astl_state_props_t*  states;         
  uint32_t* state_count;               
} astl_get_metric_states_on_target_params_t;
ASTL_API astl_status_code astlGetMetricStatesOnTarget(const astl_get_metric_states_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef const void* astl_metric_group_handle_t;  
typedef struct _astl_metric_group_props_t {
  size_t size;  
  astl_metric_group_handle_t handle;        
  const char*                name;          
  const char*                description;   
  uint32_t                   metric_count;  
  astl_metric_props_t* metrics;             
} astl_metric_group_props_t;
typedef struct astl_get_metric_group_count_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t target_handle;       
  uint32_t*            metric_group_count;  
} astl_get_metric_group_count_params_t;
ASTL_API astl_status_code astlGetMetricGroupCount(const astl_get_metric_group_count_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_get_metric_groups_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t       target_handle;  
  astl_metric_group_props_t* metric_groups;  
  uint32_t* metric_group_count;  
} astl_get_metric_groups_params_t;
ASTL_API astl_status_code astlGetMetricGroups(const astl_get_metric_groups_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_get_metric_group_metrics_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t             target_handle;  
  const astl_metric_group_props_t* metric_group;   
  astl_metric_props_t* metrics;                    
} astl_get_metric_group_metrics_params_t;
ASTL_API astl_status_code astlGetMetricGroupMetrics(const astl_get_metric_group_metrics_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct _astl_collection_params_t {
  size_t   size;               
  uint32_t flags;              
  uint32_t sampling_interval;  
  astl_collection_mode_t collection_mode;  
} astl_collection_params_t;
typedef struct astl_configure_counter_collection_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  const astl_collection_params_t*
      collection_params;                         
  const astl_counter_handle_t* counter_handles;  
  uint32_t                     counter_count;    
} astl_configure_counter_collection_on_target_params_t;
ASTL_API astl_status_code astlConfigureCounterCollectionOnTarget(
    const astl_configure_counter_collection_on_target_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_configure_metric_collection_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  const astl_collection_params_t*
      collection_params;                       
  const astl_metric_handle_t* metric_handles;  
  uint32_t                    metric_count;    
} astl_configure_metric_collection_on_target_params_t;
ASTL_API astl_status_code astlConfigureMetricCollectionOnTarget(
    const astl_configure_metric_collection_on_target_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_configure_metric_group_collection_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  const astl_collection_params_t*
      collection_params;  
  const astl_metric_group_handle_t* metric_group_handles;  
  uint32_t                          metric_group_count;    
} astl_configure_metric_group_collection_on_target_params_t;
ASTL_API astl_status_code astlConfigureMetricGroupCollectionOnTarget(
    const astl_configure_metric_group_collection_on_target_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_read_immediate_on_target_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t target_handle;  
} astl_read_immediate_on_target_params_t;
ASTL_API astl_status_code astlReadImmediateOnTarget(const astl_read_immediate_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct astl_read_immediate_params_t {
  size_t   size;   
  uint32_t flags;  
} astl_read_immediate_params_t;
ASTL_API astl_status_code astlReadImmediate(const astl_read_immediate_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_start_collection_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
} astl_start_collection_on_target_params_t;
ASTL_API astl_status_code astlStartCollectionOnTarget(const astl_start_collection_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct astl_start_collection_params_t {
  size_t   size;   
  uint32_t flags;  
} astl_start_collection_params_t;
ASTL_API astl_status_code astlStartCollection(const astl_start_collection_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_pause_collection_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
} astl_pause_collection_on_target_params_t;
ASTL_API astl_status_code astlPauseCollectionOnTarget(const astl_pause_collection_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct astl_pause_collection_params_t {
  size_t   size;   
  uint32_t flags;  
} astl_pause_collection_params_t;
ASTL_API astl_status_code astlPauseCollection(const astl_pause_collection_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_resume_collection_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
} astl_resume_collection_on_target_params_t;
ASTL_API astl_status_code astlResumeCollectionOnTarget(const astl_resume_collection_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct astl_resume_collection_params_t {
  size_t   size;   
  uint32_t flags;  
} astl_resume_collection_params_t;
ASTL_API astl_status_code astlResumeCollection(const astl_resume_collection_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_stop_collection_on_target_params_t {
  size_t   size;   
  uint32_t flags;  
  astl_target_handle_t target_handle;  
} astl_stop_collection_on_target_params_t;
ASTL_API astl_status_code astlStopCollectionOnTarget(const astl_stop_collection_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct astl_stop_collection_params_t {
  size_t   size;   
  uint32_t flags;  
} astl_stop_collection_params_t;
ASTL_API astl_status_code astlStopCollection(const astl_stop_collection_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_save_params_t {
  size_t      size;              
  uint32_t    flags;             
  const char* output_file_path;  
} astl_save_params_t;
ASTL_API astl_status_code astlSaveCollection(const astl_save_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_load_params_t {
  size_t      size;              
  uint32_t    flags;             
  const char* input_file_path;   
  size_t      chunk_size_bytes;  
} astl_load_params_t;
ASTL_API astl_status_code astlLoadCollection(const astl_load_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_get_counter_sample_count_on_target_params_t {
  size_t size;                           
  uint32_t              flags;           
  astl_target_handle_t  target_handle;   
  astl_counter_handle_t counter_handle;  
  uint32_t*             sample_count;    
} astl_get_counter_sample_count_on_target_params_t;
ASTL_API astl_status_code
astlGetCounterSampleCountOnTarget(const astl_get_counter_sample_count_on_target_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_get_counter_samples_on_target_params_t {
  size_t size;                           
  uint32_t              flags;           
  astl_target_handle_t  target_handle;   
  astl_counter_handle_t counter_handle;  
  astl_sample_t*        samples;         
  uint32_t*             sample_count;    
} astl_get_counter_samples_on_target_params_t;
ASTL_API astl_status_code astlGetCounterSamplesOnTarget(const astl_get_counter_samples_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct astl_get_metric_sample_count_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  astl_metric_handle_t metric_handle;  
  uint32_t*            sample_count;   
} astl_get_metric_sample_count_on_target_params_t;
ASTL_API astl_status_code
astlGetMetricSampleCountOnTarget(const astl_get_metric_sample_count_on_target_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_get_metric_samples_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  astl_metric_handle_t metric_handle;  
  astl_sample_t*       samples;        
  uint32_t*            sample_count;   
} astl_get_metric_samples_on_target_params_t;
ASTL_API astl_status_code astlGetMetricSamplesOnTarget(const astl_get_metric_samples_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct _astl_metric_statistics_t {
  size_t       size;   
  uint32_t     flags;  
  astl_value_t min;    
  astl_value_t max;    
  astl_value_t avg;    
  uint64_t count;      
} astl_metric_statistics_t;
typedef struct astl_get_metric_statistics_on_target_params_t {
  size_t size;                              
  uint32_t                  flags;          
  astl_target_handle_t      target_handle;  
  astl_metric_handle_t      metric_handle;  
  astl_metric_statistics_t* summary;        
} astl_get_metric_statistics_on_target_params_t;
ASTL_API astl_status_code astlGetMetricStatisticsOnTarget(const astl_get_metric_statistics_on_target_params_t* params)
    ASTL_API_NOEXCEPT;
typedef struct _astl_discrete_histogram_bin_t {
  size_t       size;   
  astl_value_t value;  
  uint64_t     count;  
} astl_discrete_histogram_bin_t;
typedef struct astl_get_metric_discrete_histogram_bin_count_on_target_params_t {
  size_t size;                         
  uint32_t             flags;          
  astl_target_handle_t target_handle;  
  astl_metric_handle_t metric_handle;  
  uint32_t*            bin_count;      
} astl_get_metric_discrete_histogram_bin_count_on_target_params_t;
ASTL_API astl_status_code astlGetMetricDiscreteHistogramBinCountOnTarget(
    const astl_get_metric_discrete_histogram_bin_count_on_target_params_t* params) ASTL_API_NOEXCEPT;
typedef struct astl_get_metric_discrete_histogram_on_target_params_t {
  size_t size;                                   
  uint32_t                       flags;          
  astl_target_handle_t           target_handle;  
  astl_metric_handle_t           metric_handle;  
  astl_discrete_histogram_bin_t* bins;           
  uint32_t* bin_count;  
} astl_get_metric_discrete_histogram_on_target_params_t;
ASTL_API astl_status_code astlGetMetricDiscreteHistogramOnTarget(
    const astl_get_metric_discrete_histogram_on_target_params_t* params) ASTL_API_NOEXCEPT;