python/astl/_core.pxd


    cdef struct astl_start_collection_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle

    cdef struct astl_start_collection_params_t:
        size_t size
        uint32_t flags

    cdef struct astl_pause_collection_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle

    cdef struct astl_pause_collection_params_t:
        size_t size
        uint32_t flags

    cdef struct astl_resume_collection_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle

    cdef struct astl_resume_collection_params_t:
        size_t size
        uint32_t flags

    cdef struct astl_stop_collection_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle

    cdef struct astl_stop_collection_params_t:
        size_t size
        uint32_t flags

    # targets
    int astlGetSystemInfo(const astl_get_system_info_params_t* params)
    int astlGetTargetCount(const astl_get_target_count_params_t* params)
    int astlGetTargets(const astl_get_targets_params_t* params)

    # counters
    int astlGetCounterCount(const astl_get_counter_count_params_t* params)
    int astlGetCounters(const astl_get_counters_params_t* params)

    # metrics
    int astlGetMetricCount(const astl_get_metric_count_params_t* params)
    int astlGetMetrics(const astl_get_metrics_params_t* params)

    # metric groups
    int astlGetMetricGroupCount(const astl_get_metric_group_count_params_t* params)
    int astlGetMetricGroups(const astl_get_metric_groups_params_t* params)
    int astlGetMetricGroupMetrics(const astl_get_metric_group_metrics_params_t* params)
    int astlGetMetricStateCountOnTarget(const astl_get_metric_state_count_on_target_params_t* params)
    int astlGetMetricStatesOnTarget(const astl_get_metric_states_on_target_params_t* params)

    # collection configuration
    int astlConfigureCounterCollectionOnTarget(const astl_configure_counter_collection_on_target_params_t* params)
    int astlConfigureMetricCollectionOnTarget(const astl_configure_metric_collection_on_target_params_t* params)
    int astlConfigureMetricGroupCollectionOnTarget(const astl_configure_metric_group_collection_on_target_params_t* params)

    # immediate read
    int astlReadImmediateOnTarget(const astl_read_immediate_on_target_params_t* params)
    int astlReadImmediate(const astl_read_immediate_params_t* params)

    # lifecycle control
    int astlStartCollectionOnTarget(const astl_start_collection_on_target_params_t* params)
    int astlStartCollection(const astl_start_collection_params_t* params)
    int astlPauseCollectionOnTarget(const astl_pause_collection_on_target_params_t* params)
    int astlPauseCollection(const astl_pause_collection_params_t* params)
    int astlResumeCollectionOnTarget(const astl_resume_collection_on_target_params_t* params)
    int astlResumeCollection(const astl_resume_collection_params_t* params)
    int astlStopCollectionOnTarget(const astl_stop_collection_on_target_params_t* params)
    int astlStopCollection(const astl_stop_collection_params_t* params)

    # save/load collection
    int astlSaveCollection(const astl_save_params_t* params)
    int astlLoadCollection(const astl_load_params_t* params)

    # samples
    cdef struct _astl_sample_t:
        uint64_t timestamp
        astl_value_t value
    ctypedef _astl_sample_t astl_sample_t

    cdef struct astl_get_counter_sample_count_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle
        const void* counter_handle
        uint32_t* sample_count

    cdef struct astl_get_counter_samples_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle
        const void* counter_handle
        astl_sample_t* samples
        uint32_t* sample_count

    cdef struct astl_get_metric_sample_count_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle
        const void* metric_handle
        uint32_t* sample_count

    cdef struct astl_get_metric_samples_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle
        const void* metric_handle
        astl_sample_t* samples
        uint32_t* sample_count

    int astlGetCounterSampleCountOnTarget(const astl_get_counter_sample_count_on_target_params_t* params)
    int astlGetCounterSamplesOnTarget(const astl_get_counter_samples_on_target_params_t* params)
    int astlGetMetricSampleCountOnTarget(const astl_get_metric_sample_count_on_target_params_t* params)
    int astlGetMetricSamplesOnTarget(const astl_get_metric_samples_on_target_params_t* params)

    # metric summary
    cdef struct _astl_metric_statistics_t:
        size_t   size
        uint32_t flags
        astl_value_t min
        astl_value_t max
        astl_value_t avg
        uint64_t count
    ctypedef _astl_metric_statistics_t astl_metric_statistics_t

    cdef struct astl_get_metric_statistics_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle
        const void* metric_handle
        astl_metric_statistics_t* summary

    int astlGetMetricStatisticsOnTarget(const astl_get_metric_statistics_on_target_params_t* params)

    # discrete histogram
    cdef struct _astl_discrete_histogram_bin_t:
        size_t size
        astl_value_t value
        uint64_t count
    ctypedef _astl_discrete_histogram_bin_t astl_discrete_histogram_bin_t

    cdef struct astl_get_metric_discrete_histogram_bin_count_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle
        const void* metric_handle
        uint32_t* bin_count

    cdef struct astl_get_metric_discrete_histogram_on_target_params_t:
        size_t size
        uint32_t flags
        const void* target_handle
        const void* metric_handle
        astl_discrete_histogram_bin_t* bins
        uint32_t* bin_count

    int astlGetMetricDiscreteHistogramBinCountOnTarget(const astl_get_metric_discrete_histogram_bin_count_on_target_params_t* params)
    int astlGetMetricDiscreteHistogramOnTarget(const astl_get_metric_discrete_histogram_on_target_params_t* params)
